# loybits

./: README.md  RunningInstructions.md  TechnicalStackAndArchitecture(POC).md  loybits.code-workspace  missionVision.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  problemAndSolution.md  technicalStackAndArchitecture.md
contract/deployments/loybits_manager/: alephzero-testnet.ts  loybits_manager.contract  loybits_manager.json  loybits_manager.wasm
contract/src/loybits_manager/: Cargo.toml  lib.rs
frontend/: .env.example  .gitignore  README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx  sitemap.ts
frontend/app/AI/: page.tsx
frontend/app/AI/business/: page.tsx
frontend/app/AI/info/: page.tsx
frontend/app/acquirer_view/: page.tsx
frontend/app/user_view/: page.tsx
frontend/components/AI/: AIChatbot.tsx  BusinessChatbot.tsx  InfoChatbot.tsx
frontend/components/acquirer/: create-account.tsx  create-reward.tsx  simulate-payment.tsx
frontend/components/home/: card.tsx  ownerCard.tsx
frontend/components/layout/: footer.tsx  navbar.tsx
frontend/components/ui/: button.tsx  dropdown-menu.tsx  spinner.tsx  tooltip.tsx
frontend/components/web3/: connect-button.tsx  my-rewards.tsx  rewards.tsx
frontend/deployments/: deployments.ts
frontend/deployments/loybits_manager/: alephzero-testnet.ts  loybits_manager.json
frontend/lib/hooks/: use-balance.ts  use-claim.ts  use-create-acquirer.ts  use-create-reward.ts  use-payment.ts  use-rewards.ts
(+2 files in other folders)
